# polaris

./: .gitignore  .gitmodules  HF_PR_README.md  README.md  pyproject.toml
docker/: Dockerfile.base  Dockerfile.polaris  compose.yml
docs/: checkpoints.md  checkpoints_and_envs.md  custom_environments.md  custom_policies.md
experiments/: example.py  with_servers.py
scripts/: batch_eval.py  eval.py  eval_test.py  upload_env_to_hf.py
src/diff-surfel-rasterization/: setup.py
src/diff-surfel-rasterization/diff_surfel_rasterization/: __init__.py
src/polaris/: cli.py  config.py  hf_upload.py  utils.py
src/polaris/environments/: __init__.py  droid_cfg.py  manager_based_rl_raytraced_environment.py  manager_based_rl_splat_environment.py  robot_cfg.py
src/polaris/environments/rubrics/: __init__.py  base.py  checkers.py
src/polaris/policy/: __init__.py  abstract_client.py  droid_jointpos_client.py
src/polaris/splat_renderer/: splat_renderer.py
src/polaris/splat_renderer/scene/: cameras.py  gaussian_model.py
src/simple-knn/: setup.py
src/simple-knn/simple_knn/: __init__.py
