[project]
name = "polaris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arhan Jain", email = "arhan.j04@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "isaaclab[all,isaacsim]==2.1.0",
    "mediapy>=1.2.4",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.3",
    "tyro>=0.9.17",
    "diff-surfel-rasterization",
    "simple-knn",
    "openpi-client",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch" }
isaacsim = { index = "nvidia" }
diff-surfel-rasterization = { path = "src/diff-surfel-rasterization", editable=true}
simple-knn = { path = "src/simple-knn", editable=true}
openpi-client = { path = "third_party/openpi/packages/openpi-client" }


[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true 

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.basedpyright]
extraPaths = [

    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab/",
    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab_assets/",
    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab_tasks/",
]
typeCheckingMode = "standard"
