[project]
name = "polaris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arhan Jain", email = "arhan.j04@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "isaaclab[all,isaacsim]==2.3.0",
    "mediapy>=1.2.4",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.3",
    "tyro>=0.9.17",
    "diff-surfel-rasterization",
    "simple-knn",
    "openpi-client",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[project.scripts]
polaris = "polaris.cli:main"

[tool.uv]
override-dependencies = [
    "pywin32==306; sys_platform == 'win32'",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "torch" }
torchvision = { index = "torch" }
isaacsim = { index = "nvidia" }
diff-surfel-rasterization = { path = "src/diff-surfel-rasterization", editable=true}
simple-knn = { path = "src/simple-knn", editable=true}
openpi-client = { path = "third_party/openpi/packages/openpi-client" }


[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"
explicit = true

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true



[tool.basedpyright]
extraPaths = [

    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab/",
    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab_assets/",
    "./.venv/lib/python3.11/site-packages/isaaclab/source/isaaclab_tasks/",
]
typeCheckingMode = "standard"
